adding correct text to location
still need to get the internal links into external ones (website based stuff), and add the Cascading Style Sheet, with the new correct link

--- a/System Requirements.html
+++ b/System Requirements.html
@@ -1,10 +1,100 @@
-<html>
-<head>
-<title>~test~</title>
+<html> <!--Currently not fully HTML5.0, but this will soon change hopefully -->
+
+<Head>
+
+<title>System Requirements</title>
+
+<!--Autoplay in IE, Google Chrome, & Safari - not in Firefox or Opera -->
+<!--<audio src=".././All Media data/Audio/Mp3/Better Days.mp3" autoplay>[ Fallback Message ]</audio>--> <!--This code remains here until I can get a better
+   
+<!--This would autoplay in Firefox, Google Chrome, & Opera - but not in IE or Safari-->
+<!--<audio src=".././All Media data/Audio/Ogg Vorbis/Better Days.ogg" autoplay>Fallback Message</audio>-->
+
+<!-- please remember to delete the <!-- endings! -->
+
+<link rel="stylesheet" href="Rollover Stylesheet.css">
+
 </head>
 <body>
-<h1>
-TEST
-</h1>
+<Div id="Opening Message">
+<Div id="Specs">
+<h3>
+So, Sunny, you think you can take on this game of mystery and confusion? in this game, you WILL need ALL of the following; <br>
+A computer (apple mac, Windows or freewere OS[such as Linux]) with the following specs...<br>
+</h3>
+<Div id=" Microsoft Windows Specs">
+<h2><a href="http://www.microsoft.com" title="Microsoft Home">Windows;</a></h2><br>
+<h3>XP OS 32 bit minimum - Only XP (SP3) 32 bit and 7 (SP1) [Currently] alpha tested.<br>
+Minimum 512MB Ram for sure <br>
+(You can probbly use a lower ram, but what's the point mensioning anything no one's gonna have, eh?)<br>
+a single core processer with around 1GB power should work.<br>
+(Again, you could probbly use a Less powerful Prosesser, but 1GB is a nice round figure)</h3>
+</Div>
+<br>
+<br>
+<Div id="Apple Macantosh Specs">
+<h2>Apple Mac OS Currently Unsuported/Untested</h2><br>
+</Div id="Apple Macantosh Specs">
+<Div id="Freeware Specs">
+<h2>Freeware OS Currently Unsuported/Untested</h2><br>
+</Div id="Freeware Specs">
+</Div id="Specs">
+<Div id="Rules">
+<h1>The Rules.</h1><br><br>
+Now this may have a lot of NO's but thats because if you do these things, your gonna be taking the fun away, sunny. <br>
+DON'T:<br>
+Use RUN (On windows XP SP3) or the search bar (On windows 7 SP1) <br>
+<br>
+Make all the hint's too hard for the player you want to play. sometimes this may force you to make it stupidly simple, but this is to let them have fun.<br>
+<br>
+Say you made all of this game. just because you got the ALPHA/BETA vesion under GNU, you do not own it. The Final vesion of this Will be pay-for release. Even moreso because the images took a LOT of time and a LOT of REAL MONEY to make and/or get copyright holders permision. respect the simple laws of copyright please. <br>
+<br>
+DO:<br>
+Enjoy Modding this game(more info about modification as of ver. 0.0.2α)<br>
+<br>
+Help the player if they're having problems<br>
+<br>
+Send any alpha/beta Problems to<a id="E-Mail" href="mailto://kingemocut@yahoo.co.uk" title="My Main E-Mail"> kingemocut@yahoo.co.uk</a><br>
+<br>
+tell us if you enjoy this game and want us to make another version.<br>
+<br>
+but mostly...<br>
+<pre id="Word_Art"><h4>
+
+     /\_____________________________/\/\
+    (  /   | | | | | | |     |_|       /\ ____________________________________________
+     \|    | | | | | | |              |  |                                            )
+      |                               |  |____________                          ___  (
+      |            ____________________\/            (     |   |   /\   \    / |      )
+      |           /  /    __/                         )    |---|  /--\   \  /  |---  (
+      |           | |  __/                           (     |   | /    \   \/   |___   )
+      |           | _\/                               )                              (
+      |           |/                                 (          ___                   )
+      |           |                                   )        |    |   | |  /|      (
+      |           |                                  (         |--- |   | | / |       )
+      |           |                                   )        |    |___| |/  |      (
+      |           |                                  (                                )
+      |           |                                   )                              (
+      |___________|                                  (                                )
+       !_________!                                    )______________________________(
+
+   </h4></pre>
+<br>
+</Div id="Rules">
+</Div id="Opening Message">
+
+<footer id="Copyright small hand">
+<h6>This folder game was made by<a id="Kingemocut" href="http://kingemocut.weebly.com" title="My Website">Kingemocut</a> and <a href="http://xXx8CyanTrain8xXx.deviantart.com" id="palkia_my_Queen" title="my GF's DA">xXx8CyanTrain8xXx.</a> All rights reserved. For a full list of copyright holders for all of the items within this game, go <a href="http://kingemocut.weebly.com/folder_game_-_copyright_owners.html" id="Copyright" title="Copyright stuff... >.<">Here</a>, and while your at it, why dont you also vist the rest of the site!</h6>
+</footer>
 </body>
+	
 </html>
+<!--Some small thanks
+<copyright id="Full">
+Thanks to In Easy Steps for help with learning to program in JS and HTML 5.0, as well as a little help with CSS. Without you guys/gals these html documents would be VERY Bland.
+Thanks to xXx8Cyantrain8xXx for being the cutest most suportive girlfriend a guy could ever wish for. Without your suport this game wouldn't even have been thought of, so i owe you big time <3
+Thanks to you, Player/Downloader, for playing this game. without you helping to play this game, all of our (xXx8CyanTrain8xXx's and Kingemocut's) work would have been in vain.
+Thanks also to Breaking Benjamin, the people who do the song that loads upon site loading. thanks.
+For all other thanks, you know where to go.
+</coppyright>
+-->
