--- a/scripts/HTML5.0/Changes Log.html
+++ b/scripts/HTML5.0/Changes Log.html
@@ -28,7 +28,7 @@ var winObject = window.open( "./The 'Gifts'/Misc HTMLs (unnecessary to open)/Nam
 <link rel="stylesheet" href="Question 1 stylesheet.css">
 
 <!--Autoplay in IE, Google Chrome, & Safari - not in Firefox or Opera-->
-<!--<audio src="./All Media data/Audio/Mp3/Better Days.mp3" autoplay>[ Fallback Message ]</audio>-->
+<!--<audio src="" autoplay>[ Fallback Message ]</audio>-->
    
 <!-- This would autoplay in Firefox, Google Chrome, & Opera - but not in IE or Safari -->
 <!--<audio src="audio.ogg" autoplay>Fallback Message</audio>-->
@@ -58,23 +58,24 @@ So... onto the edit log.
       All infomation is as such yet to happen, and said update will hapen as soon as possible -->
       
   <div id="0.0.2α">
-	(To Come in ver no. 0.0.2α)[planed release date is March 23rd 2013 at 12:00PM<br>
+	(To Come in ver no. 0.0.2α)[planed release date was March 23rd 2013 at 12:00PM<br>
   More HTML Stuff.<br>
-	Create basic hints files (and make the defalt infomation).<br>
-	Create javascript to print infomation dependent on a button click<br>
-	Create basic Location mapping for the folders. [because of the downloading lemit of 5MB. }.{ Stupid Hosting Site]<br>
-	Create the Bonus Gift :3<br>
+	Create basic hints files (and make the defalt infomation).<br> <!-- DONE -->
+	Create javascript to print infomation dependent on a button click<br> <!-- DONE -->
+	Create basic Location mapping for the folders. [because of the downloading limit of 5MB. }.{ Stupid Hosting Site]<br> <!-- Sorta DONE -->
+	Create the Bonus Gift :3<br> <!-- not gonna do for version 0.0.2α. possibly wait for 0.1.0α. -->
 	
 	
 	</div>
 	<div id="0.0.1β"><!--(this is the current release version of the source code.)-->
-	(In ver no. 0.0.1β) [Release date March 16, 2013 12:00PM(12:00)[UK] 6:00AM(6:00)[US]]<br>
+	(In ver no. 0.0.1β) [Release date March 16, 2013 12:00PM(12:00)[UK] 6:00AM(6:00)[US]]<br> <!-- date script was released -->
 	<br>
 	[Current version]<br>
 	Finish Level 1 hints<br>
 	Finish HTML 5.0 version of The rules.txt<br>
-	</div><br>
-	<div ="0.0.1α">
+	</div>
+	<br>
+	<div id="0.0.1α">
 	(ver no. 0.0.1α)<br>
 	[First version]<br>
 	Created basic file systems, all text in .txt format.<br>
